Fix right-align padding

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,6 +21,7 @@ a {
 }
 .td-numeric {
     text-align: end;
+    padding-right: 1em;
 }
 
 .bg-application {
